todo : local try, then java verbose , then executor entry class in standalone